--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name | Portfolio</title>
+  <title>Mihir Joshi | Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Your Name</h1>
-      <p>Web Developer | Designer | Programmer</p>
+      <h1>Mihir Joshi</h1>
+      <p>SRE</p>
     </div>
   </header>
 
@@ -50,15 +50,15 @@
     <h2>Contact</h2>
     <p>Feel free to connect with me via email or social media!</p>
     <ul>
-      <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
-      <li>LinkedIn: <a href="#">LinkedIn Profile</a></li>
-      <li>GitHub: <a href="#">GitHub Profile</a></li>
+      <li>Email: <a href="mailto:mihirj961@gmail.com">mihirj961@gmail.com</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/mihir-mj">LinkedIn Profile</a></li>
+      <li>GitHub: <a href="https://www.github.com/mihir-mj">GitHub Profile</a></li>
     </ul>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 Your Name. All rights reserved.</p>
+      <p>&copy; 2024 Mihir Joshi. All rights reserved.</p>
     </div>
   </footer>
 </body>
