--- a/index.html
+++ b/index.html
@@ -3,56 +3,83 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mihir Joshi | Portfolio</title>
+  <title>Mihir Joshi</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <div class="container">
       <h1>Mihir Joshi</h1>
-      <p>SRE</p>
+      <p>Jersey City, New Jersey</p>
+      <p>
+        <a href="mailto:mihirj961@gmail.com">mihirj961@gmail.com</a> | 
+        <a href="tel:+15516896665">551-689-6665</a> | 
+        <a href="https://www.linkedin.com/in/mihir-mj" target="_blank">LinkedIn</a> | 
+        <a href="https://www.github.com/mihir-mj" target="_blank">GitHub</a>
+      </p>
     </div>
   </header>
 
-  <nav>
+  <section id="education" class="container">
+    <h2>Education</h2>
     <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><strong>Stevens Institute of Technology, Hoboken, NJ</strong>  
+        <br>Master of Science, Computer Science (May 2023) | GPA: 3.65/4  
+        <br>Courses: Cybersecurity, Web Development, Database Systems, Cloud Computing, System Administration, Cryptography
+      </li>
+      <li><strong>University of Mumbai, Mumbai, India</strong>  
+        <br>Bachelor of Engineering, Computer Engineering (June 2021) | GPA: 3.4/4
+      </li>
     </ul>
-  </nav>
-
-  <section id="about" class="container">
-    <h2>About Me</h2>
-    <p>
-      Hello! I'm a passionate developer with skills in web development, 
-      programming, and design. I enjoy creating intuitive and visually appealing solutions.
-    </p>
   </section>
 
-  <section id="projects" class="container">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-      <div class="project">
-        <h3>Project 1</h3>
-        <p>Brief description of your project.</p>
-        <a href="#">View Project</a>
-      </div>
-      <div class="project">
-        <h3>Project 2</h3>
-        <p>Brief description of your project.</p>
-        <a href="#">View Project</a>
-      </div>
+  <section id="skills" class="container">
+    <h2>Skills</h2>
+    <ul>
+      <li><strong>Programming Languages:</strong> Python, JavaScript, Bash, Java, C++</li>
+      <li><strong>Web Technologies:</strong> HTML, CSS, Node.js</li>
+      <li><strong>Technologies/Platforms:</strong> Linux, Ansible, OpenStack, Kubernetes, Grafana, Prometheus, Git, JIRA, SNOW</li>
+      <li><strong>Data Formats:</strong> JSON, YAML, INI, XML</li>
+      <li><strong>Databases:</strong> SQL, MongoDB</li>
+    </ul>
+  </section>
+
+  <section id="experience" class="container">
+    <h2>Experience</h2>
+    <div>
+      <h3>Deployment Engineer – Radcom, Inc</h3>
+      <p><strong>Feb 2023 – Present</strong></p>
+      <ul>
+        <li>Deployed and integrated Radcom solutions within AT&T NFV networks, optimizing performance.</li>
+        <li>Developed Ansible/Bash processes for OpenStack VMs, upgrades, and security patches.</li>
+        <li>Monitored infrastructure health using Prometheus and Grafana dashboards.</li>
+        <li>Conducted incident responses including debugging, RCA, and fixes in production environments.</li>
+      </ul>
+    </div>
+    <div>
+      <h3>AT&T Labs Summer Intern – AT&T</h3>
+      <p><strong>June 2022 – Aug 2022</strong></p>
+      <ul>
+        <li>Automated system-wide security updates with Ansible playbooks.</li>
+        <li>Developed Python scripts for automated CDR validation, improving efficiency.</li>
+        <li>Enhanced compliance enforcement across network elements.</li>
+      </ul>
     </div>
   </section>
 
-  <section id="contact" class="container">
-    <h2>Contact</h2>
-    <p>Feel free to connect with me via email or social media!</p>
+  <section id="projects" class="container">
+    <h2>Academic Projects</h2>
     <ul>
-      <li>Email: <a href="mailto:mihirj961@gmail.com">mihirj961@gmail.com</a></li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/mihir-mj">LinkedIn Profile</a></li>
-      <li>GitHub: <a href="https://www.github.com/mihir-mj">GitHub Profile</a></li>
+      <li><strong>Healthy Recipes Web Application:</strong> Full-stack app with Node.js backend and MongoDB database.</li>
+      <li><strong>Sign Language Translator App:</strong> Flutter-based app translating voice input to sign language.</li>
+      <li><strong>Port Scanner Application:</strong> Python utility to identify host vulnerabilities.</li>
+    </ul>
+  </section>
+
+  <section id="activities" class="container">
+    <h2>Extracurricular Activities</h2>
+    <ul>
+      <li>Organized tech events as part of the student committee at A.P. Shah Institute of Technology.</li>
     </ul>
   </section>
 
@@ -63,4 +90,3 @@
   </footer>
 </body>
 </html>
-
