--- a/index.html
+++ b/index.html
@@ -3,89 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mihir Joshi</title>
+  <title>Mihir Joshi | Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Mihir Joshi</h1>
-      <p>Jersey City, New Jersey</p>
+      <h1>👨‍💻 Mihir Joshi</h1>
+      <p>Web Developer | Deployment Engineer | Tech Enthusiast</p>
       <p>
-        <a href="mailto:mihirj961@gmail.com">mihirj961@gmail.com</a> | 
-        <a href="tel:+15516896665">551-689-6665</a> | 
-        <a href="https://www.linkedin.com/in/mihir-mj" target="_blank">LinkedIn</a> | 
+        📧 <a href="mailto:mihirj961@gmail.com">mihirj961@gmail.com</a> | 📞 
+        <a href="tel:+15516896665">551-689-6665</a> | 🔗 
+        <a href="https://www.linkedin.com/in/mihir-mj" target="_blank">LinkedIn</a> | 🐱 
         <a href="https://www.github.com/mihir-mj" target="_blank">GitHub</a>
       </p>
     </div>
   </header>
 
-  <section id="education" class="container">
-    <h2>Education</h2>
-    <ul>
-      <li><strong>Stevens Institute of Technology, Hoboken, NJ</strong>  
-        <br>Master of Science, Computer Science (May 2023) | GPA: 3.65/4  
-        <br>Courses: Cybersecurity, Web Development, Database Systems, Cloud Computing, System Administration, Cryptography
-      </li>
-      <li><strong>University of Mumbai, Mumbai, India</strong>  
-        <br>Bachelor of Engineering, Computer Engineering (June 2021) | GPA: 3.4/4
-      </li>
-    </ul>
+  <section id="about" class="container">
+    <h2>About Me 🌟</h2>
+    <p>
+      Hi! I'm Mihir Joshi, a dynamic and passionate developer with a keen interest in solving complex technical challenges.
+      My journey spans web development, system automation, and cloud solutions, blending technical expertise with creativity.
+    </p>
+    <p>
+      I am looking for job roles such as Site reliablity enginner, Devops engineer and automation engineer.
+    </p>
   </section>
 
   <section id="skills" class="container">
-    <h2>Skills</h2>
-    <ul>
-      <li><strong>Programming Languages:</strong> Python, JavaScript, Bash, Java, C++</li>
-      <li><strong>Web Technologies:</strong> HTML, CSS, Node.js</li>
-      <li><strong>Technologies/Platforms:</strong> Linux, Ansible, OpenStack, Kubernetes, Grafana, Prometheus, Git, JIRA, SNOW</li>
-      <li><strong>Data Formats:</strong> JSON, YAML, INI, XML</li>
-      <li><strong>Databases:</strong> SQL, MongoDB</li>
-    </ul>
+    <h2>Skills ⚙️</h2>
+    <div class="skills-grid">
+      <div class="skill">Python</div>
+      <div class="skill">Ansible</div>
+      <div class="skill">Linux CLI</div>
+      <div class="skill">AWS/GCP/Azure</div>
+      <div class="skill">Node.js</div>
+      <div class="skill">HTML & CSS</div>
+      <div class="skill">MongoDB</div>
+      <div class="skill">Prometheus</div>
+      <div class="skill">Docker & Kubernetes</div>
+
+    </div>
   </section>
 
   <section id="experience" class="container">
-    <h2>Experience</h2>
-    <div>
+    <h2>Experience 💼</h2>
+    <div class="experience-item">
       <h3>Deployment Engineer – Radcom, Inc</h3>
       <p><strong>Feb 2023 – Present</strong></p>
       <ul>
-        <li>Deployed and integrated Radcom solutions within AT&T NFV networks, optimizing performance.</li>
-        <li>Developed Ansible/Bash processes for OpenStack VMs, upgrades, and security patches.</li>
-        <li>Monitored infrastructure health using Prometheus and Grafana dashboards.</li>
-        <li>Conducted incident responses including debugging, RCA, and fixes in production environments.</li>
+        <li>Integrated and optimized solutions for AT&T NFV networks.</li>
+        <li>Developed automation tools using Ansible and Bash for OpenStack VMs.</li>
+        <li>Enhanced monitoring with Grafana dashboards.</li>
       </ul>
     </div>
-    <div>
+    <div class="experience-item">
       <h3>AT&T Labs Summer Intern – AT&T</h3>
       <p><strong>June 2022 – Aug 2022</strong></p>
       <ul>
-        <li>Automated system-wide security updates with Ansible playbooks.</li>
-        <li>Developed Python scripts for automated CDR validation, improving efficiency.</li>
-        <li>Enhanced compliance enforcement across network elements.</li>
+        <li>Automated compliance enforcement with Ansible playbooks.</li>
+        <li>Designed Python scripts for CDR validation, boosting productivity.</li>
       </ul>
     </div>
   </section>
 
   <section id="projects" class="container">
-    <h2>Academic Projects</h2>
-    <ul>
-      <li><strong>Healthy Recipes Web Application:</strong> Full-stack app with Node.js backend and MongoDB database.</li>
-      <li><strong>Sign Language Translator App:</strong> Flutter-based app translating voice input to sign language.</li>
-      <li><strong>Port Scanner Application:</strong> Python utility to identify host vulnerabilities.</li>
-    </ul>
-  </section>
-
-  <section id="activities" class="container">
-    <h2>Extracurricular Activities</h2>
-    <ul>
-      <li>Organized tech events as part of the student committee at A.P. Shah Institute of Technology.</li>
-    </ul>
+    <h2>Projects 🛠️</h2>
+    <div class="projects-grid">
+      <div class="project">
+        <h3>Healthy Recipes App 🍎</h3>
+        <p>Full-stack app to manage recipes using Node.js and MongoDB.</p>
+      </div>
+      <div class="project">
+        <h3>Sign Language Translator ✋</h3>
+        <p>Flutter-based app translating voice input to sign language.</p>
+      </div>
+      <div class="project">
+        <h3>Port Scanner Utility 🔍</h3>
+        <p>Python tool for analyzing vulnerabilities and open ports.</p>
+      </div>
+    </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 Mihir Joshi. All rights reserved.</p>
+      <p>&copy; 2024 Mihir Joshi. Built with ❤️ and creativity.</p>
     </div>
   </footer>
 </body>
