--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <h1>👨‍💻 Mihir Joshi</h1>
-      <p>Web Developer | Deployment Engineer | Tech Enthusiast</p>
+      <p>Deployment Engineer</p>
       <p>
         📧 <a href="mailto:mihirj961@gmail.com">mihirj961@gmail.com</a> | 📞 
         <a href="tel:+15516896665">551-689-6665</a> | 🔗 
@@ -53,9 +53,9 @@
       <h3>Deployment Engineer – Radcom, Inc</h3>
       <p><strong>Feb 2023 – Present</strong></p>
       <ul>
-        <li>Integrated and optimized solutions for AT&T NFV networks.</li>
-        <li>Developed automation tools using Ansible and Bash for OpenStack VMs.</li>
-        <li>Enhanced monitoring with Grafana dashboards.</li>
+        <li>Deployed,tested,andintegrated Radcom solutions within the AT&T NFV network under AT&T Labs, ensuring optimized performance</li>
+        <li>Developed automated process in ansible/bash to streamline VM instantiations in OpenStack, third-party software component upgrades and OS security patches</li>
+        <li>Collaborated with development teams to identify and troubleshoot failures, software/infra bottlenecks and integrating the fixes in production environment</li>
       </ul>
     </div>
     <div class="experience-item">
@@ -65,6 +65,18 @@
         <li>Automated compliance enforcement with Ansible playbooks.</li>
         <li>Designed Python scripts for CDR validation, boosting productivity.</li>
       </ul>
+    </div>
+  </section>
+
+  <section id="education" class="container">
+    <h2>Education</h2>
+    <div class="education">
+      <h3>Master of Science Computer Science - Stevens Institute of Technology Hoboken, NJ</h3>
+      <p><strong>August 2021 - May 2023</strong></p>
+    </div>
+    <div class="education">
+      <h3>Bachelor of Computer Engineering - University of Mumbai</h3>
+      <p><strong>August 2017 - May 2021</strong></p>
     </div>
   </section>
 
